Commit de teste

--- a/src/corrida.html
+++ b/src/corrida.html
@@ -72,7 +72,7 @@
 </head>
 <body onload="Initialize()">
 	<canvas id="tela" width="500" height="500" style="background-color:#ffff00;">
-		Canvas do HTML5 não suportado pelo Browser.
+		Canvas do HTML5 não suportado pelo Browser!
 	</canvas>
 </body>
 </html>
