adiciona arquivo aviao básico

--- a/src/aviao.html
+++ b/src/aviao.html
@@ -7,17 +7,17 @@
 
   var plane = {
     image: new Image(),
-    speed: 1,
-    pos_x:50,
-    pos_y:50,
+    speed: 2,
+    pos_x:250,
+    pos_y:250,
     load: function () {
-        this.image.src = "../media/aviao3.png";
+        this.image.src = "../media/aviao_peq.png";
     },
     draw: function(context){
-      // context.drawImage(this.image, this.pos_x, this.pos_y);
-      context.arc(this.pos_x, this.pos_y, 5, 0, 2 * Math.PI, false);
-      context.fillStyle = "#f00";
-      context.fill();
+      context.drawImage(this.image, this.pos_x, this.pos_y);
+      // context.arc(this.pos_x, this.pos_y, 2, 0, 2 * Math.PI, false);
+      // context.fillStyle = "#f00";
+      // context.fill();
     },
     update: function(){
       // var mousex = 0;
@@ -28,17 +28,30 @@
       //   // y = y + Math.sin(angulo) * aceleracao;
       // }
 
-      var angle = Math.atan2(mousey - this.pos_y, mousex = this.pos_x);
+      var delta_x = this.pos_x - mousex;
+      var delta_y = this.pos_y - mousey;
 
-      this.pos_x = this.pos_x + Math.cos(angle) * this.speed;
-      this.pos_y = this.pos_y + Math.sin(angle) * this.speed;
+      console.log("******** delta x = " + delta_x);
+      console.log("******** delta y = " + delta_y);
+
+      var angle = Math.atan2(delta_y, delta_x);
+      console.log("******** angle RAD= " + angle);
+      console.log("******** angle deg= " + angle * (180 /  Math.PI));
+
+      // var angle = Math.atan2(mousey - this.pos_y, mousex = this.pos_x);
+
+      // this.pos_x = this.pos_x + Math.cos(angle) * this.speed;
+      // this.pos_y = this.pos_y + Math.sin(angle) * this.speed;
+
+      // this.pos_x = this.pos_x + this.pos_x * this.speed;
+      // this.pos_y = this.pos_x + this.pos_y * this.speed;
 
       // if(pos_x !== mousex){
       //   pos_x = pos_x *
       // }
       //
-      // x = x + Math.cos(angulo) * aceleracao;
-      // y = y + Math.sin(angulo) * aceleracao;
+      this.pos_x = this.pos_x + Math.cos(angle) * this.speed * -1;
+      this.pos_y = this.pos_y + Math.sin(angle) * this.speed * -1;
     }
   }
 
@@ -68,7 +81,7 @@
 
   }
   function Draw() {
-    context.clearRect(0,0,800,600);
+    context.clearRect(0,0,500,500);
     context.fillText("MOUSE x = " + mousex + ", y = " + mousey, 0, 20);
     plane.draw(context);
   }
