removendo arquivos inúteis

--- a/src/desafio_2.html
+++ b/src/desafio_2.html
@@ -15,7 +15,7 @@
             vel:4,
 
             load: function () {
-                this.image.src = "../media/smurf_sprite.png"
+                this.image.src = "../media/smurf.png"
             },
 
             draw:function(context){
