traduz mensagens para pt-BR

--- a/src/desafio_3.html
+++ b/src/desafio_3.html
@@ -99,7 +99,7 @@
                     ctx.textAlign = "center";
                     ctx.textBaseline = "middle";
                     ctx.fillStlye = "white";
-                    ctx.fillText("Start", W / 2, H / 2);
+                    ctx.fillText("Comecar", W / 2, H / 2);
                 }
             };
 
@@ -118,7 +118,7 @@
                     ctx.textAlign = "center";
                     ctx.textBaseline = "middle";
                     ctx.fillStlye = "white";
-                    ctx.fillText("Restart", W / 2, H / 2 - 25);
+                    ctx.fillText("Reiniciar", W / 2, H / 2 - 25);
                 }
             };
 
@@ -279,7 +279,7 @@
                 ctx.font = "20px Arial, sans-serif";
                 ctx.textAlign = "center";
                 ctx.textBaseline = "middle";
-                ctx.fillText("Game Over - You scored " + points + " points!", W / 2, H / 2 + 25);
+                ctx.fillText("FIM DE JOGO - Voce marcou " + points + " pontos!", W / 2, H / 2 + 25);
 
                 cancelRequestAnimFrame(init);
 
